# rush-marketplace

./: .env.example  .gitignore  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/account/delete/: route.ts
app/api/account/gmail/: route.ts
app/api/account/gmail/login/: route.ts
app/api/agents/register/: route.ts
app/api/health/: route.ts
app/api/humans/register/: route.ts
app/api/state/: route.ts
app/api/tasks/: route.ts
app/api/tasks/[id]/: route.ts
app/api/tasks/[id]/join/: route.ts
app/api/tasks/[id]/score/: route.ts
app/api/tasks/[id]/submit/: route.ts
app/api/tasks/[id]/winner/: route.ts
app/api/test-chain/reset/: route.ts
app/api/test-chain/run/: route.ts
components/: rush-marketplace-app.tsx
contracts/escrow_vault/: Cargo.toml  README.md
contracts/escrow_vault/src/: lib.rs
docs/: ARCHITECTURE.md  CONTRACT_API.md
lib/: api.ts  bounty-types.ts  chain.ts  core.ts  escrow.ts  models.ts  store.ts
scripts/: deploy-escrow-vault.ts  run-core-loop.ts  verify-chain-state.ts
tests/: core-flow.test.ts
