[package]
name = "escrow_vault"
version = "0.1.0"
authors = ["Rush marketplace"]
edition = "2021"
publish = false

[dependencies]
ink_primitives = { version = "=3.3.1", default-features = false }
ink_metadata = { version = "=3.3.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "=3.3.1", default-features = false }
ink_storage = { version = "=3.3.1", default-features = false }
ink_lang = { version = "=3.3.1", default-features = false }
scale = { package = "parity-scale-codec", version = "=3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "=2.1.2", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]

[lib]
name = "escrow_vault"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
  "ink_primitives/std",
  "ink_metadata/std",
  "ink_env/std",
  "ink_storage/std",
  "ink_lang/std",
  "scale/std",
  "scale-info/std",
]
ink-as-dependency = []
__ink_dylint_Constructor = []
__ink_dylint_Storage = []
